fix: fixed drawer on small screen

--- a/src/App.css
+++ b/src/App.css
@@ -28,8 +28,8 @@
 }
 
 .inner-container {
-    display: flex;
     height: 100%;
+    display: flex;
     justify-content: space-between;
     overflow: hidden;
 }
@@ -39,6 +39,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
 }
 
 html {
